--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -23,6 +23,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="maze_01.txt" />
+    <Text Include="MAZE_02.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
