--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -33,6 +33,7 @@
     <ProjectGuid>{aa876b38-3cbc-4fba-a4c2-8eeab260fd43}</ProjectGuid>
     <RootNamespace>Project</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Project_1_PROG</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
